<resources>
    <string name="app_name" translatable="false">Dante</string>
    <string name="app_version" translatable="false">3.7</string>
    <string name="dante_github_link" translatable="false">https://github.com/shockbytes/Dante</string>
    <string name="label_settings">Settings</string>
    <string name="label_stats">Your statistics</string>
    <string name="currently_reading">Currently reading</string>
    <string name="menu_main_stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="action_move_to_upcoming">Move to read later</string>
    <string name="action_move_to_reading">Move to reading</string>
    <string name="action_move_to_done">Move to done</string>
    <string name="action_delete">Delete</string>
    <string name="na">Not available</string>
    <string name="got_it">Got it</string>
    <string name="permission_camera_rationale">The app needs access to your camera, in order to detect the barcodes of the books.</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The scan window will terminate.</string>
    <string name="transition_name_thumb" translatable="false">transition_name_thumb</string>
    <string name="transition_name_title" translatable="false">transition_name_title</string>
    <string name="transition_name_subtitle" translatable="false">transition_name_subtitle</string>
    <string name="transition_name_author" translatable="false">transition_name_author</string>
    <string name="transition_name_card" translatable="false">transition_name_card</string>
    <string name="prefs_category_about">About</string>
    <string name="prefs_app_version_title">App version</string>
    <string name="prefs_developer_title">Developer</string>
    <string name="prefs_developer_summary" translatable="false">Shockbytes Studio &#169; 2016-2019</string>
    <string name="prefs_icons_title" translatable="false">Icons</string>
    <string name="prefs_icons_summary" translatable="false">www.icons8.com\nwww.flaticon.com</string>
    <string name="detail_pages" translatable="false">%1$d / %2$d</string>
    <string name="action_share">Share</string>
    <string name="label_capture">Capture book</string>
    <string name="dismiss">Dismiss</string>
    <string name="help_scan">Focus the ISBN until the app automatically recognizes it</string>
    <string name="dialogfragment_query_title">Search by title</string>
    <string name="dialogfragment_query_message">Please enter the title or the ISBN of your book.</string>
    <string name="manual_query">Title or ISBN</string>
    <string name="book_finished">%s finished</string>
    <string name="contentdesc_listitem_img_thumb" translatable="false">Thumbnail for book cover</string>
    <string name="contentdesc_listitem_img_overflow" translatable="false">Overflow icon for list item</string>
    <string name="send_to">Share your book</string>
    <string name="label_backup">Manage backups</string>
    <string name="restore">Restore (%d)</string>
    <string name="backup">Backup</string>
    <string name="restore_title">Restore</string>
    <string name="backup_title">Backup</string>
    <string name="last_backup">Last backup: %s</string>
    <string name="backup_books_amount">%d books</string>
    <string name="menu_main_backup">Backup</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_strategy_merge">Merge</string>
    <string name="backup_strategy_overwrite">Overwrite</string>
    <string name="backup_created">Backup created</string>
    <string name="backup_not_created">Cannot create backup</string>
    <string name="backup_removed">Backup removed</string>
    <string name="backup_restore_strategy_title">Restore strategy</string>
    <string name="backup_restored">Backup from %s restored</string>
    <string name="backup_restore_error">Error while restoring backup. Reason: %s</string>
    <string name="book_finished_move_to_done_question">You have finished your book. Would you like to add it to the done list?</string>
    <string name="login_title">Hello!</string>
    <string name="login_rationale">Thank you for using Dante. In order to provide a better experience we will need access to your Google Account. Furthermore you can also create Google Drive backups. You can also login anytime later if you do not need these features now.</string>
    <string name="login_later">Maybe later</string>
    <string name="dialog_login_title">Login to Dante</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="backup_info">Choose <b>merge</b> if you want to preserve the books on your device and complement the collection with the missing books in the backup. Or choose <b>overwrite</b> to completely delete all books on your device and replace them by the books in the backup file.</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_acknowledge">OKAY, GOT IT</string>
    <string name="welcome_with_name">Hello %s!</string>
    <string name="google_welcome_rationale">You can manage all your Google related activities when your are clicking the symbol above in the app bar. Click on this icon if you want to create a <b>backup</b>.</string>
    <string name="camera_permission_title">Camera</string>
    <string name="scanner_not_operational">The app is currently being configured</string>
    <string name="rate_book">Rate</string>
    <string name="rate">Rate</string>
    <string name="ratings_default">It\'s okay!</string>
    <string name="dialogfragment_rating_title">How do you like %s?</string>
    <string name="add_notes">Notes</string>
    <string name="apply">Apply</string>
    <string name="dialogfragment_paging_title">Enter pages</string>
    <string name="dialogfragment_paging_current_page">Current page</string>
    <string name="dialogfragment_paging_pages">Pages</string>
    <string name="dialogfragment_paging_separator" translatable="false">/</string>
    <string name="dialogfragment_paging_error">Invalid input!Pages cannot be less than current page, or invalid numbers!</string>
    <string name="dialogfragment_notes_header">Write down your thoughts, feelings or some general remarks about %s.</string>
    <string name="save">Save</string>
    <string name="dialogfragment_notes_hint">Your thoughts belong in here&#8230;</string>
    <string name="my_notes">My notes</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="preview_failed">Cannot open the camera. Restarting your phone may help!</string>
    <string name="add">Add</string>
    <string name="search_online">Search online</string>
    <string name="search_online_hint">No books found in your library. Do you want to search online?</string>
    <string name="search_invalid_query">Invalid search query</string>
    <string name="no_internet_connection">No internet connection at the moment</string>
    <string name="percentage_formatter" translatable="false">%d%%</string>
    <string name="prefs_sort_strategy_key" translatable="false">prefs_sort_strategy_key</string>
    <string name="download_attachment_error">Oh, something terribly went wrong!</string>
    <string name="menu_main_sort">Sort books</string>
    <string name="anonymous_user">Anonymous bookworm</string>
    <string name="sort_strategy_default">Default</string>
    <string name="sort_strategy_author">Author</string>
    <string name="sort_strategy_title">Title</string>
    <string name="sort_strategy_progress">Progress</string>
    <string name="sort_strategy_pages">Pages</string>
    <string name="sort_strategy_default_hint">Books are automatically inserted after scanning. You can rearrange your books by drag and drop.</string>
    <string name="sort_strategy_author_hint">Books are sorted by the name of the author. Manually rearranging your books will fall back to default sort.</string>
    <string name="sort_strategy_title_hint">Books are sorted by the book title. Manually rearranging your books will fall back to default sort.</string>
    <string name="sort_strategy_progress_hint">Books are sorted by your reading progress. Manually rearranging your books will fall back to default strategy.</string>
    <string name="sort_strategy_pages_hint">Sort your books by the ascending number of pages.</string>
    <string name="dialogfragment_sort_by">Sort by</string>
    <string name="invalid_time_range_wishlist">Wishlist date must smaller than the others…</string>
    <string name="invalid_time_range_start">Start date must lie within the range of the other dates…</string>
    <string name="invalid_time_range_end">End date must be later than the other dates…</string>
    <string name="menu_fab_scan">Scan ISBN</string>
    <string name="menu_fab_scan_long">Scan the ISBN on the back of your book.</string>
    <string name="menu_fab_scan_disabled">Scanning ISBN is disabled</string>
    <string name="menu_fab_title">Search by title</string>
    <string name="menu_fab_title_long">Find your book by entering the title.</string>
    <string name="menu_fab_title_disabled">Searching book by title is disabled</string>
    <string name="menu_fab_manual">Add manually</string>
    <string name="menu_fab_manual_long">Add book information manually.</string>
    <string name="menu_fab_manual_disabled">Adding books manually is disabled</string>
    <string name="manual_add_title">Title</string>
    <string name="manual_add_authors">Author(s)</string>
    <string name="manual_add_pages">Pages</string>
    <string name="manual_add_optional_information">Optional information</string>
    <string name="manual_add_subtitle">Subtitle</string>
    <string name="language">Language</string>
    <string name="manual_add_published_date">Published date (yyyy-MM-dd)</string>
    <string name="isbn" translatable="false">ISBN</string>
    <string name="manual_add_error">Please specify at least title, authors and amount of pages.</string>
    <string name="statistics_header_pages"><![CDATA[Pages & Books]]></string>
    <string name="statistics_header_time">Reading time</string>
    <string name="statistics_header_favs">Favourites</string>
    <string name="statistics_header_other">Others</string>
    <string name="statistics_pages_read">%s pages already read</string>
    <string name="statistics_pages_waiting">%s pages are waiting</string>
    <string name="statistics_books_read">%s books already read</string>
    <string name="statistics_books_waiting">%s books are waiting</string>
    <string name="statistics_favourite_author">Favourite author: %s</string>
    <string name="statistics_first_five_star">First 5 star book: %s</string>
    <string name="statistics_avg_books_per_month">%s books per month</string>
    <string name="statistics_duration_book">%s days for %s</string>
    <string name="statistics_most_reading_month">%s books read in %s</string>
    <string name="statistics_average_rating">Average rating: %s</string>
    <string name="prefs_category_books_general">General</string>
    <string name="prefs_dark_mode_key" translatable="false">prefs_night_mode_key</string>
    <string name="prefs_dark_mode_title">Dark mode</string>
    <string name="prefs_dark_mode_summary">Enable a dark theme for the app</string>
    <string name="prefs_feature_flag_key" translatable="false">prefs_feature_flag_key</string>
    <string name="prefs_feature_flag_title" translatable="false">Feature Flags</string>
    <string name="prefs_show_summary_key" translatable="false">prefs_show_summary_key</string>
    <string name="prefs_show_summary_title">Show book summary</string>
    <string name="prefs_show_summary_summary">Show a summary of the books in the details screen</string>
    <string name="prefs_contribute_code_key" translatable="false">prefs_contribute_key</string>
</resources>