<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/popup_item_move_to_upcoming"
        android:icon="@drawable/ic_popup_upcoming"
        android:title="@string/action_move_to_upcoming" />

    <item
        android:id="@+id/popup_item_move_to_current"
        android:icon="@drawable/ic_popup_current"
        android:title="@string/action_move_to_reading" />

    <item
        android:id="@+id/popup_item_move_to_done"
        android:icon="@drawable/ic_popup_done"
        android:title="@string/action_move_to_done" />

    <item
        android:id="@+id/popup_item_share"
        android:icon="@drawable/ic_popup_share"
        android:title="@string/action_share" />

    <item
        android:id="@+id/popup_item_delete"
        android:icon="@drawable/ic_popup_delete"
        android:title="@string/action_delete" />

</menu>