<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtDialogFragmentEnterQueryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/compat_ic_add_dark"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/compat_ic_add_dark"
        android:text="@string/dialogfragment_query_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/menuItemColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/dialogfragment_query_message"/>

    <EditText
        android:id="@+id/dialogfragment_isbn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/manual_query"
        android:inputType="text"
        android:textSize="17sp" />

</LinearLayout>
